@@ -24,12 +24,20 @@ Kiwi UI Test: command line interface
 """
 
 import optparse
+import os
 import sys
+import traceback
 
 from kiwi.log import set_log_level
 
+def excepthook(exc_type, exc_value, tb):
+    traceback.print_exception(exc_type, exc_value, tb.tb_next)
+    os._exit(1)
+
 def _play(options, filename, args):
     from kiwi.ui.test.player import play_file
+    sys.excepthook = excepthook
+
     play_file(filename, args)
 
 def _record(options, filename, args):
